force-app/main/default/objects/Building__c/Building__c.object-meta.xml
<CustomObject>
    <label>棟</label>
    <nameField>
        <label>棟名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>