force-app/main/default/objects/Building__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <label>番地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>