force-app/main/default/objects/Building__c/fields/BuildingKana__c.field-meta.xml
<CustomField>
    <fullName>BuildingKana__c</fullName>
    <label>フリガナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>