force-app/main/default/objects/Building__c/fields/BuildingKeyLinage__c.field-meta.xml
<CustomField>
    <fullName>BuildingKeyLinage__c</fullName>
    <label>棟鍵行数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>