force-app/main/default/objects/Building__c/fields/BuildingType__c.field-meta.xml
<CustomField>
    <fullName>BuildingType__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>