force-app/main/default/objects/Building__c/fields/BuiledingYear__c.field-meta.xml
<CustomField>
    <fullName>BuiledingYear__c</fullName>
    <label>築年</label>
    <length>255</length>
    <type>Text</type>
</CustomField>