force-app/main/default/objects/Building__c/fields/Era__c.field-meta.xml
<CustomField>
    <fullName>Era__c</fullName>
    <label>年号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>