force-app/main/default/objects/Building__c/fields/GarageEmptyNum__c.field-meta.xml
<CustomField>
    <fullName>GarageEmptyNum__c</fullName>
    <label>駐車場空き台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>