force-app/main/default/objects/Building__c/fields/OnFoot__c.field-meta.xml
<CustomField>
    <fullName>OnFoot__c</fullName>
    <label>徒歩</label>
    <length>255</length>
    <type>Text</type>
</CustomField>