force-app/main/default/objects/Building__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>路線</label>
    <length>255</length>
    <type>Text</type>
</CustomField>